# agentic-ai-public

./: pyproject.toml
notebooks/: M2_UGL_1.ipynb  M3_UGL_1.ipynb  M3_UGL_2.ipynb  M4_UGL_1.ipynb  M5_UGL_1_R.ipynb  M5_UGL_2.ipynb
notebooks/assignments/: C1M2_Assignment.ipynb  C1M5_Assignment.ipynb
